objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Clever_Contacts_Sync_Details__c</fullName>
        <label>Clever Contacts Sync Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clever_Contacts_Sync_Status__c</fullName>
        <label>Clever Contacts Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRIMARY_Call_Status__c</fullName>
        <label>PRIMARY Call Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_DESCRIPTION_Call_Status__c</fullName>
        <label>Phone DESCRIPTION Call Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_SECONDARY_Call_Status__c</fullName>
        <label>Phone SECONDARY Call Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>